Verbesserung der JSON-Datenbearbeitung und UI
Diese Änderungen optimieren die Benutzeroberfläche zur Anzeige und Bearbeitung von JSON-Daten in einer hierarchischen Struktur. Neue Methoden unterstützen die Anzeige von Objekten mit einem `$type`-Feld und verbessern die Benutzerinteraktion durch das Hinzufügen und Löschen von Eigenschaften und Elementen. Eine Fehlerbehandlungsroutine wurde implementiert, um hilfreiche Fehlermeldungen anzuzeigen. Der Code wurde strukturell optimiert, um die Lesbarkeit und Wartbarkeit zu erhöhen, und es wurden Hilfsmethoden zur Handhabung von JSON-Pfaden hinzugefügt. Zudem wurden spezifische erwartete Typen für Arrays definiert, um die Benutzerführung zu verbessern.

--- a/JsonEditorApp/MainWindow.xaml
+++ b/JsonEditorApp/MainWindow.xaml
@@ -24,8 +24,8 @@
             <ItemsControl x:Name="JsonTreeItemsControl">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <!-- This DataTemplate needs to be flexible to display different JsonNode types -->
-                        <!-- We'll handle this in code-behind or with DataTemplateSelector -->
+                        <!-- DataTemplate will be defined in code-behind or with a DataTemplateSelector -->
+                        <!-- Placeholder -->
                         <TextBlock Text="Loading..."/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
